# claimgraph

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: CNAME  blueprint.html  graph.html  how-it-works.html  index.html  timelines.html
docs/assets/: claimgraph.css  claimgraph.js  claimgraph.json  fermat.json  fundamental-algebra.json  kepler.json  pipeline.d2  prime-number-theorem.json  reconcile.json  weak-pfr.json
docs/timelines/: fermat.html  four-color.html  kepler.html  weak-pfr.html
examples/blueprint-gap/: axioms.txt  claimgraph.json  content.tex
examples/blueprint-igl/: axioms.txt  claimgraph.json  content.tex  leandeps.txt
examples/fermat/: claims.toml  fermat.commits  fermat.json
examples/four-color/: blueprint.tex  claimgraph.json  claims.toml  four-color.commits
examples/fundamental-algebra/: claims.toml  fundamental-algebra.commits
examples/igl/: claimgraph.json  claims.toml  igl.commits
examples/kepler/: claims.toml  kepler.commits  kepler.json
examples/paper-igl/: claimgraph.json  claims.toml  paper-igl.commits
examples/prime-number-theorem/: claims.toml  prime-number-theorem.commits
examples/weak-pfr/: BLACKBOARD.md  claimgraph.json  claims.toml  weak-pfr.commits
schema/: claimgraph.schema.json
scripts/: gen_og.py  render-pipeline.sh  sync-viewer.sh
src/claimgraph/: __init__.py  blackboard.py  blueprint.py  build.py  (+11 more)
tests/: test_blackboard.py  test_blueprint.py  test_cli.py  test_curriculum.py  test_export.py  test_graph.py  test_leandeps.py  test_leangraph.py  test_reconcile.py  test_svg_timeline.py  test_timeline.py
(+1 files in other folders)
